# uni-ocr

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  capture_screenshots.py  docker-compose.yml  pyproject.toml
assets/bob-plugin/: info.json  uniocr.bobplugin
src/uniocr/: __init__.py  api.py  cache.py  cli.py  database.py  routers_auth.py  routers_stream.py  routers_system.py
src/uniocr/engines/: __init__.py  paddle.py
src/uniocr/exporters/: __init__.py  pdf.py
src/uniocr/frontend/: package-lock.json  package.json
src/uniocr/frontend/src/: App.tsx  main.tsx
src/uniocr/frontend/src/pages/: Login.tsx  OcrConsole.tsx  Settings.tsx
src/uniocr/processors/: __init__.py
src/uniocr/static/: index.html
src/uniocr/static/assets/: index--JNWkpgu.js  index-B5nwMpUg.css  index-BhKSyFU0.js  index-CIrYNRTy.js  index-CfCjTfxH.css  index-CmXfSTqi.css  index-D3CvEyTu.js  index-DGd_xMEd.js  index-DLclllIb.js  index-DqvWgDMR.css  index-Pu0Oj-Mb.css  index-fqgANWoB.js
